Complete F1 email identity hardening